--- a/index.html
+++ b/index.html
@@ -3,46 +3,90 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Marathi Crime Files</title>
+<title>Vasai Live News</title>
 <script src="https://cdn.tailwindcss.com"></script>
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+import { getAuth, GoogleAuthProvider, signInWithPopup, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+import { getFirestore, collection, addDoc, doc, deleteDoc, updateDoc, onSnapshot, query, orderBy, setDoc } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+
+const firebaseConfig = {
+  apiKey:"AIzaSyDMvkPqFKDjrMaLlBkercBYoLxEs1GEbng",
+  authDomain:"all-madrsa.firebaseapp.com",
+  projectId:"all-madrsa",
+  storageBucket:"all-madrsa.appspot.com",
+  messagingSenderId:"619313835874",
+  appId:"1:619313835874:web:e33f0c8bdef6d1a7f31e9f"
+};
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
+const ADMIN_EMAIL="zaradigitalseva@gmail.com";
+const IMGBB_API_KEY="d12c2e4a8650157b2b6b9fe85336ea43";
+</script>
 <style>
 body{margin:0;font-family:Arial,sans-serif;background:#f6f7fb;color:#0b2540;}
 header{display:flex;justify-content:space-between;align-items:center;padding:8px 12px;background:#1e40af;color:white;position:sticky;top:0;z-index:300;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
-header h1{font-size:20px;font-weight:bold;}
-header .buttons button{margin-left:6px;padding:6px 12px;border-radius:6px;cursor:pointer;color:white;}
-.posts-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:12px;padding:8px;margin-top:16px;}
+header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:cover;}
+.header-buttons button{padding:6px 12px;margin-left:6px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;}
+.header-buttons button:hover{transform:scale(1.05);}
+.notice-ticker,.headline-ticker{min-height:28px;overflow:hidden;white-space:nowrap;color:white;position:sticky;z-index:250;}
+.notice-ticker{background:#dc2626;padding:6px;top:56px;}
+.headline-ticker{background:#1e40af;padding:6px;top:88px;}
+.ticker-text{display:inline-block;padding-right:50px;animation:scroll 20s linear infinite;}
+@keyframes scroll{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
+.posts-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:12px;padding:8px;margin-top:116px;}
 .card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 6px 20px rgba(2,6,23,0.06);cursor:pointer;transition:transform 0.2s;position:relative;}
 .card:hover{transform:scale(1.02);}
 .card img{width:100%;height:150px;object-fit:cover;cursor:zoom-in;transition:transform 0.3s;}
 .card-body{padding:8px;}
 .card-body h3{font-weight:700;font-size:18px;margin-bottom:4px;}
 .card-body p{font-size:14px;color:#555;margin-bottom:6px;}
-.modal-bg{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:400;overflow:auto;}
+.social-share{display:flex;gap:4px;margin-top:4px;}
+.social-share button{font-size:12px;padding:2px 4px;border-radius:4px;cursor:pointer;}
+.modal-bg{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:400;overflow:hidden;}
 .modal{background:#fff;border-radius:10px;max-width:650px;width:90%;max-height:85%;overflow-y:auto;padding:16px;position:relative;}
 .modal img{max-width:100%;border-radius:10px;margin-bottom:6px;}
 .modal-close{position:absolute;top:10px;right:15px;background:#fff;border:none;border-radius:50%;padding:5px 10px;cursor:pointer;font-weight:bold;}
 .editor{padding:12px;background:#fff;margin:6px;border-radius:8px;box-shadow:0 2px 5px rgba(0,0,0,0.1);}
 .editor input,.editor textarea{border:1px solid #ccc;border-radius:6px;padding:6px;margin-bottom:6px;width:100%;}
 .editor button{padding:6px 12px;margin-right:6px;border-radius:6px;background:#1e40af;color:white;cursor:pointer;}
+.image-zoom:hover{transform:scale(1.05);}
+.zoom-modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.85);justify-content:center;align-items:center;z-index:9999;}
+.zoom-modal img{max-width:90%;max-height:90%;border-radius:10px;box-shadow:0 0 25px rgba(255,255,255,0.3);}
+.zoom-close{position:absolute;top:20px;right:30px;background:#fff;border:none;border-radius:50%;font-size:20px;padding:5px 10px;cursor:pointer;}
 </style>
 </head>
 <body>
 
 <header>
-  <h1>Marathi Crime Files</h1>
-  <div class="buttons">
-    <button id="loginBtn" class="bg-green-500">Login</button>
-    <button id="logoutBtn" class="bg-red-600 hidden">Logout</button>
+  <div class="flex items-center">
+    <img src="https://i.postimg.cc/vTb8F94w/vasalive-png.jpg" alt="Logo">
+    <h1 class="font-bold text-xl">Vasai Live News</h1>
+  </div>
+  <div class="header-buttons">
+    <button id="loginBtn" class="bg-green-500 text-white">Login</button>
+    <button id="logoutBtn" class="hidden bg-red-600 text-white">Logout</button>
   </div>
 </header>
 
+<div class="notice-ticker"><span class="ticker-text" id="noticeText"></span></div>
+<div class="headline-ticker"><span class="ticker-text" id="headlineText"></span></div>
+
+<section id="noticeEditor" class="editor hidden">
+  <h2>📰 Admin Notice</h2>
+  <input id="noticeInput" placeholder="Enter notice text...">
+  <button id="saveNoticeBtn">Save</button>
+</section>
+
 <section id="editorArea" class="editor hidden">
-  <h2>🖋️ Admin Panel</h2>
-  <input id="postTitle" placeholder="Title">
-  <textarea id="postDesc" placeholder="Short Description"></textarea>
-  <input type="file" id="postImage">
+  <h2>🖋️ Admin: Create/Edit News</h2>
+  <input id="aTitle" placeholder="Title">
+  <input id="aCat" placeholder="Category">
+  <div id="blocksList"></div>
+  <button id="addTextBtn">Add Text</button>
+  <button id="addImageBtn">Add Image (Max 5)</button>
   <button id="publishBtn">Publish</button>
-  <p id="status"></p>
 </section>
 
 <section class="posts-grid" id="postsArea"></section>
@@ -54,122 +98,155 @@ header .buttons button{margin-left:6px;padding:6px 12px;border-radius:6px;cursor
   </div>
 </div>
 
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-import { getFirestore, collection, addDoc, serverTimestamp, getDocs, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
-import { getStorage, ref as sRef, uploadBytesResumable, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-storage.js";
-
-// ===== Firebase Config =====
-const firebaseConfig = {
-  apiKey: "AIzaSyCLCUAiPz-sqhFDskG9g9AwyUI1RdTQWfk",
-  authDomain: "marathi-crime-files.firebaseapp.com",
-  projectId: "marathi-crime-files",
-  storageBucket: "marathi-crime-files.appspot.com",
-  messagingSenderId: "973325762370",
-  appId: "1:973325762370:web:4fb97306806bbe6cc0d2db",
-  measurementId: "G-1XQPKL3740"
-};
-
-const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
-const provider = new GoogleAuthProvider();
-const db = getFirestore(app);
-const storage = getStorage(app);
-
-const ADMIN_EMAIL = "gulistankh20141@gmail.com";
-
-// DOM elements
-const loginBtn = document.getElementById("loginBtn");
-const logoutBtn = document.getElementById("logoutBtn");
-const editorArea = document.getElementById("editorArea");
-const postTitle = document.getElementById("postTitle");
-const postDesc = document.getElementById("postDesc");
-const postImage = document.getElementById("postImage");
-const publishBtn = document.getElementById("publishBtn");
-const status = document.getElementById("status");
-const postsArea = document.getElementById("postsArea");
-const modalBg = document.getElementById("modalBg");
-const modalClose = document.getElementById("modalClose");
-const modalContent = document.getElementById("modalContent");
-
-// Login / Logout
-loginBtn.onclick = async () => { await signInWithPopup(auth, provider); };
-logoutBtn.onclick = async () => { await signOut(auth); };
-
-// Auth state
-onAuthStateChanged(auth, user => {
-  if(user && user.email.toLowerCase()===ADMIN_EMAIL.toLowerCase()){
-    editorArea.classList.remove("hidden");
-    loginBtn.style.display = "none";
-    logoutBtn.style.display = "inline-block";
-  } else {
-    editorArea.classList.add("hidden");
-    loginBtn.style.display = "inline-block";
-    logoutBtn.style.display = "none";
+// Zoom open
+modalContent.querySelectorAll("img.image-zoom").forEach(img => {
+  img.onclick = (e) => {
+    e.stopPropagation();
+    zoomImg.src = img.src;
+    zoomModal.style.display = "flex";
   }
 });
 
-// Publish post
-publishBtn.onclick = async () => {
-  const title = postTitle.value.trim();
-  const desc = postDesc.value.trim();
-  const file = postImage.files[0];
-  if(!title) return alert("Enter title!");
-  status.innerText = "Publishing...";
+// Zoom close
+document.querySelector(".zoom-close").onclick = () => zoomModal.style.display = "none";
+zoomModal.onclick = e => { if(e.target === zoomModal) zoomModal.style.display = "none"; }
 
-  let imgUrl = "";
-  if(file){
-    const filename = `posts/${Date.now()}_${file.name}`;
-    const storageRef = sRef(storage, filename);
-    const uploadTask = uploadBytesResumable(storageRef, file);
-    await new Promise((res, rej) => {
-      uploadTask.on('state_changed', null, err=>rej(err), ()=>res());
-    });
-    imgUrl = await getDownloadURL(uploadTask.snapshot.ref);
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+import { getAuth, GoogleAuthProvider, signInWithPopup, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+import { getFirestore, collection, addDoc, doc, deleteDoc, updateDoc, onSnapshot, query, orderBy, setDoc } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+
+// Firebase setup same as before
+const firebaseConfig = { apiKey:"AIzaSyDMvkPqFKDjrMaLlBkercBYoLxEs1GEbng", authDomain:"all-madrsa.firebaseapp.com", projectId:"all-madrsa", storageBucket:"all-madrsa.appspot.com", messagingSenderId:"619313835874", appId:"1:619313835874:web:e33f0c8bdef6d1a7f31e9f"};
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
+const ADMIN_EMAIL="zaradigitalseva@gmail.com";
+const IMGBB_API_KEY="d12c2e4a8650157b2b6b9fe85336ea43";
+
+// DOM elements
+const loginBtn=document.getElementById("loginBtn");
+const logoutBtn=document.getElementById("logoutBtn");
+const editorArea=document.getElementById("editorArea");
+const noticeEditor=document.getElementById("noticeEditor");
+const postsArea=document.getElementById("postsArea");
+const blocksList=document.getElementById("blocksList");
+const aTitle=document.getElementById("aTitle");
+const aCat=document.getElementById("aCat");
+const noticeText=document.getElementById("noticeText");
+const headlineText=document.getElementById("headlineText");
+const modalBg=document.getElementById("modalBg");
+const modalClose=document.getElementById("modalClose");
+const modalContent=document.getElementById("modalContent");
+const zoomModal=document.getElementById("zoomModal");
+const zoomImg=document.getElementById("zoomImg");
+
+let editingId=null;
+
+// Auth
+loginBtn.onclick = async()=>{await signInWithPopup(auth,new GoogleAuthProvider());}
+logoutBtn.onclick=()=>signOut(auth);
+
+auth.onAuthStateChanged(user=>{
+  if(user && user.email===ADMIN_EMAIL){
+    editorArea.classList.remove("hidden");
+    noticeEditor.classList.remove("hidden");
+    loginBtn.classList.add("hidden");
+    logoutBtn.classList.remove("hidden");
+  } else {
+    editorArea.classList.add("hidden");
+    noticeEditor.classList.add("hidden");
+    loginBtn.classList.remove("hidden");
+    logoutBtn.classList.add("hidden");
   }
+});
 
-  await addDoc(collection(db,"crimes"),{
-    title, desc, imgUrl, createdAt: serverTimestamp()
-  });
-
-  postTitle.value = "";
-  postDesc.value = "";
-  postImage.value = "";
-  status.innerText = "Published ✅";
-  loadPosts();
-};
-
-// Load posts
-async function loadPosts(){
-  postsArea.innerHTML="";
-  const snap = await getDocs(collection(db,"crimes"));
-  snap.forEach(docSnap=>{
-    const data = docSnap.data();
-    const card = document.createElement("div");
-    card.className="card";
-    card.innerHTML=`
-      <img src="${data.imgUrl||'https://via.placeholder.com/300x200?text=No+Image'}">
-      <div class="card-body">
-        <h3>${data.title}</h3>
-        <p>${data.desc||''}</p>
-      </div>
-    `;
-    card.onclick = async ()=>{
-      const d = await getDoc(doc(db,"crimes",docSnap.id));
-      modalContent.innerHTML=`<h2 class="text-lg font-bold mb-2">${d.data().title}</h2><p>${d.data().desc||''}</p>`;
-      if(d.data().imgUrl) modalContent.innerHTML+=`<img src="${d.data().imgUrl}" style="width:100%;border-radius:6px;margin-top:6px;">`;
-      modalBg.style.display="flex";
-    };
-    postsArea.appendChild(card);
-  });
+// IMGBB Upload
+async function uploadToImgBB(file){
+  const formData=new FormData();
+  formData.append("image",file);
+  const res=await fetch(`https://api.imgbb.com/1/upload?key=${IMGBB_API_KEY}`,{method:"POST",body:formData});
+  const data=await res.json();
+  return data.data.url;
 }
 
-modalClose.onclick = ()=>{ modalBg.style.display="none"; };
-modalBg.onclick = e => { if(e.target===modalBg) modalBg.style.display="none"; };
+// Add Text/Image
+document.getElementById("addTextBtn").onclick=()=>{
+  const t=document.createElement("textarea"); t.placeholder="Write paragraph..."; t.dataset.type="text"; t.className="border p-2 w-full mb-2 rounded"; blocksList.appendChild(t);
+}
+document.getElementById("addImageBtn").onclick=()=>{
+  if(blocksList.querySelectorAll('input[type="file"]').length>=5){alert("Max 5 images allowed"); return;}
+  const inp=document.createElement("input"); inp.type="file"; inp.dataset.type="image"; inp.className="w-full mb-2"; blocksList.appendChild(inp);
+}
 
-loadPosts();
+// Publish/Update
+const publishBtn=document.getElementById("publishBtn");
+publishBtn.onclick=async()=>{
+  const title=aTitle.value.trim(), cat=aCat.value.trim();
+  if(!title) return alert("Enter title!");
+  const blocks=[];
+  for(const el of blocksList.children){
+    if(el.dataset.type=="text" && el.value.trim()) blocks.push({type:"text",text:el.value.trim()});
+    else if(el.type=="file" && el.files.length>0){
+      const url=await uploadToImgBB(el.files[0]);
+      if(url) blocks.push({type:"image",url});
+    }
+  }
+  if(blocks.length===0) return alert("Add content!");
+  if(editingId){
+    await updateDoc(doc(db,"vasai_news",editingId),{title,category:cat,blocks,time:Date.now()});
+    editingId=null;
+  } else {
+    await addDoc(collection(db,"vasai_news"),{title,category:cat,blocks,time:Date.now()});
+  }
+  aTitle.value=aCat.value=""; blocksList.innerHTML="";
+}
+
+// Notice
+const noticeRef=doc(db,"settings","notice");
+document.getElementById("saveNoticeBtn").onclick=()=>setDoc(noticeRef,{text:document.getElementById("noticeInput").value.trim()});
+
+// Load posts & notice
+onSnapshot(query(collection(db,"vasai_news"),orderBy("time","desc")),snap=>{
+  const posts=snap.docs.map(d=>({id:d.id,...d.data()}));
+  postsArea.innerHTML="";
+  posts.forEach(d=>{
+    const img=d.blocks.find(b=>b.type=="image")?.url||"https://via.placeholder.com/300x150?text=No+Image";
+    const txt=d.blocks.find(b=>b.type=="text")?.text.substring(0,80)+"..."||"";
+    const card=document.createElement("div");
+    card.className="card";
+    card.innerHTML=`<img src='${img}' class='image-zoom'><div class='card-body'><h3>${d.title}</h3><p>${txt}</p></div>`;
+    card.onclick=()=>showModal(d);
+    postsArea.appendChild(card);
+  });
+  headlineText.textContent=posts.slice(0,5).map(p=>p.title).join(" — ");
+});
+onSnapshot(noticeRef,snap=>{noticeText.textContent=snap.exists()?snap.data().text:""});
+
+// Modal
+modalClose.onclick=()=>modalBg.style.display="none";
+modalBg.onclick=e=>{if(e.target===modalBg) modalBg.style.display="none";}
+function showModal(d){
+  modalContent.innerHTML=`<h2 class='text-lg font-bold mb-2'>${d.title}</h2>`;
+  d.blocks.forEach(b=>{if(b.type=="text") modalContent.innerHTML+=`<p class='mb-2 text-gray-800'>${b.text}</p>`;
+  else modalContent.innerHTML+=`<img src='${b.url}' class='image-zoom'>`;});
+  const user=auth.currentUser;
+  if(user && user.email===ADMIN_EMAIL){
+    const editBtn=document.createElement("button"); editBtn.textContent="Edit"; editBtn.className="bg-gray-200 px-3 py-1 rounded mr-2";
+    editBtn.onclick=()=>{
+      editingId=d.id; aTitle.value=d.title; aCat.value=d.category; blocksList.innerHTML="";
+      d.blocks.forEach(b=>{if(b.type=="text"){const t=document.createElement("textarea"); t.value=b.text; t.dataset.type="text"; t.className="border p-2 w-full mb-2 rounded"; blocksList.appendChild(t);} else{const inp=document.createElement("input"); inp.type="file"; inp.className="w-full mb-2"; blocksList.appendChild(inp);}});
+      modalBg.style.display="none";
+    };
+    const delBtn=document.createElement("button"); delBtn.textContent="Delete"; delBtn.className="bg-red-500 text-white px-3 py-1 rounded";
+    delBtn.onclick=async()=>{if(confirm("Delete this post?")) await deleteDoc(doc(db,"vasai_news",d.id)); modalBg.style.display="none";}
+    modalContent.appendChild(editBtn); modalContent.appendChild(delBtn);
+  }
+  modalBg.style.display="flex";
+  modalContent.querySelectorAll("img.image-zoom").forEach(img=>{img.onclick=()=>{zoomImg.src=img.src; zoomModal.style.display="flex";}});
+}
+document.querySelector(".zoom-close").onclick=()=>zoomModal.style.display="none";
+zoomModal.onclick=e=>{if(e.target===zoomModal) zoomModal.style.display="none";}
 </script>
-
 </body>
 </html>
