--- a/index.html
+++ b/index.html
@@ -5,28 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Vasai Live News</title>
 <script src="https://cdn.tailwindcss.com"></script>
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-import { getAuth, GoogleAuthProvider, signInWithPopup, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-import { getFirestore, collection, addDoc, doc, deleteDoc, updateDoc, onSnapshot, query, orderBy, setDoc } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
-
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyCLCUAiPz-sqhFDskG9g9AwyUI1RdTQWfk",
-  authDomain: "marathi-crime-files.firebaseapp.com",
-  projectId: "marathi-crime-files",
-  storageBucket: "marathi-crime-files.appspot.com", // ← यहाँ सुधार किया गया
-  messagingSenderId: "973325762370",
-  appId: "1:973325762370:web:4fb97306806bbe6cc0d2db",
-  measurementId: "G-1XQPKL3740"
-};
-
-const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
-const db = getFirestore(app);
-const ADMIN_EMAIL="zaradigitalseva@gmail.com";
-const IMGBB_API_KEY="d12c2e4a8650157b2b6b9fe85336ea43";
-</script>
 <style>
 body{margin:0;font-family:Arial,sans-serif;background:#f6f7fb;color:#0b2540;}
 header{display:flex;justify-content:space-between;align-items:center;padding:8px 12px;background:#1e40af;color:white;position:sticky;top:0;z-index:300;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
@@ -45,16 +23,13 @@ header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:
 .card-body{padding:8px;}
 .card-body h3{font-weight:700;font-size:18px;margin-bottom:4px;}
 .card-body p{font-size:14px;color:#555;margin-bottom:6px;}
-.social-share{display:flex;gap:4px;margin-top:4px;}
-.social-share button{font-size:12px;padding:2px 4px;border-radius:4px;cursor:pointer;}
-.modal-bg{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:400;overflow:hidden;}
+.modal-bg{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:400;}
 .modal{background:#fff;border-radius:10px;max-width:650px;width:90%;max-height:85%;overflow-y:auto;padding:16px;position:relative;}
 .modal img{max-width:100%;border-radius:10px;margin-bottom:6px;}
 .modal-close{position:absolute;top:10px;right:15px;background:#fff;border:none;border-radius:50%;padding:5px 10px;cursor:pointer;font-weight:bold;}
 .editor{padding:12px;background:#fff;margin:6px;border-radius:8px;box-shadow:0 2px 5px rgba(0,0,0,0.1);}
 .editor input,.editor textarea{border:1px solid #ccc;border-radius:6px;padding:6px;margin-bottom:6px;width:100%;}
 .editor button{padding:6px 12px;margin-right:6px;border-radius:6px;background:#1e40af;color:white;cursor:pointer;}
-.image-zoom:hover{transform:scale(1.05);}
 .zoom-modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.85);justify-content:center;align-items:center;z-index:9999;}
 .zoom-modal img{max-width:90%;max-height:90%;border-radius:10px;box-shadow:0 0 25px rgba(255,255,255,0.3);}
 .zoom-close{position:absolute;top:20px;right:30px;background:#fff;border:none;border-radius:50%;font-size:20px;padding:5px 10px;cursor:pointer;}
@@ -101,31 +76,33 @@ header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:
   </div>
 </div>
 
-// Zoom open
-modalContent.querySelectorAll("img.image-zoom").forEach(img => {
-  img.onclick = (e) => {
-    e.stopPropagation();
-    zoomImg.src = img.src;
-    zoomModal.style.display = "flex";
-  }
-});
-
-// Zoom close
-document.querySelector(".zoom-close").onclick = () => zoomModal.style.display = "none";
-zoomModal.onclick = e => { if(e.target === zoomModal) zoomModal.style.display = "none"; }
+<div class="zoom-modal" id="zoomModal">
+  <button class="zoom-close">×</button>
+  <img id="zoomImg" src="">
+</div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
 import { getAuth, GoogleAuthProvider, signInWithPopup, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
 import { getFirestore, collection, addDoc, doc, deleteDoc, updateDoc, onSnapshot, query, orderBy, setDoc } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
-// Firebase setup same as before
-const firebaseConfig = { apiKey:"AIzaSyDMvkPqFKDjrMaLlBkercBYoLxEs1GEbng", authDomain:"all-madrsa.firebaseapp.com", projectId:"all-madrsa", storageBucket:"all-madrsa.appspot.com", messagingSenderId:"619313835874", appId:"1:619313835874:web:e33f0c8bdef6d1a7f31e9f"};
+// 🔥 New Firebase config
+const firebaseConfig = {
+  apiKey: "AIzaSyCLCUAiPz-sqhFDskG9g9AwyUI1RdTQWfk",
+  authDomain: "marathi-crime-files.firebaseapp.com",
+  projectId: "marathi-crime-files",
+  storageBucket: "marathi-crime-files.appspot.com",
+  messagingSenderId: "973325762370",
+  appId: "1:973325762370:web:4fb97306806bbe6cc0d2db",
+  measurementId: "G-1XQPKL3740"
+};
+
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
-const ADMIN_EMAIL="gulistankh2011@gmail.com";
-const IMGBB_API_KEY="2387b6e1ec3474b6df29aaa462344077";
+
+const ADMIN_EMAIL="zaradigitalseva@gmail.com";
+const IMGBB_API_KEY="d12c2e4a8650157b2b6b9fe85336ea43";
 
 // DOM elements
 const loginBtn=document.getElementById("loginBtn");
@@ -143,10 +120,9 @@ const modalClose=document.getElementById("modalClose");
 const modalContent=document.getElementById("modalContent");
 const zoomModal=document.getElementById("zoomModal");
 const zoomImg=document.getElementById("zoomImg");
-
 let editingId=null;
 
-// Auth
+// 🔑 Auth
 loginBtn.onclick = async()=>{await signInWithPopup(auth,new GoogleAuthProvider());}
 logoutBtn.onclick=()=>signOut(auth);
 
@@ -164,7 +140,7 @@ auth.onAuthStateChanged(user=>{
   }
 });
 
-// IMGBB Upload
+// 🖼️ Upload to ImgBB
 async function uploadToImgBB(file){
   const formData=new FormData();
   formData.append("image",file);
@@ -173,16 +149,24 @@ async function uploadToImgBB(file){
   return data.data.url;
 }
 
-// Add Text/Image
+// ➕ Add text/image block
 document.getElementById("addTextBtn").onclick=()=>{
-  const t=document.createElement("textarea"); t.placeholder="Write paragraph..."; t.dataset.type="text"; t.className="border p-2 w-full mb-2 rounded"; blocksList.appendChild(t);
+  const t=document.createElement("textarea");
+  t.placeholder="Write paragraph...";
+  t.dataset.type="text";
+  t.className="border p-2 w-full mb-2 rounded";
+  blocksList.appendChild(t);
 }
 document.getElementById("addImageBtn").onclick=()=>{
   if(blocksList.querySelectorAll('input[type="file"]').length>=5){alert("Max 5 images allowed"); return;}
-  const inp=document.createElement("input"); inp.type="file"; inp.dataset.type="image"; inp.className="w-full mb-2"; blocksList.appendChild(inp);
+  const inp=document.createElement("input");
+  inp.type="file";
+  inp.dataset.type="image";
+  inp.className="w-full mb-2";
+  blocksList.appendChild(inp);
 }
 
-// Publish/Update
+// ✅ Publish/Update post
 const publishBtn=document.getElementById("publishBtn");
 publishBtn.onclick=async()=>{
   const title=aTitle.value.trim(), cat=aCat.value.trim();
@@ -205,11 +189,11 @@ publishBtn.onclick=async()=>{
   aTitle.value=aCat.value=""; blocksList.innerHTML="";
 }
 
-// Notice
+// 📢 Notice save
 const noticeRef=doc(db,"settings","notice");
 document.getElementById("saveNoticeBtn").onclick=()=>setDoc(noticeRef,{text:document.getElementById("noticeInput").value.trim()});
 
-// Load posts & notice
+// 🔄 Load posts + notice
 onSnapshot(query(collection(db,"vasai_news"),orderBy("time","desc")),snap=>{
   const posts=snap.docs.map(d=>({id:d.id,...d.data()}));
   postsArea.innerHTML="";
@@ -224,32 +208,69 @@ onSnapshot(query(collection(db,"vasai_news"),orderBy("time","desc")),snap=>{
   });
   headlineText.textContent=posts.slice(0,5).map(p=>p.title).join(" — ");
 });
-onSnapshot(noticeRef,snap=>{noticeText.textContent=snap.exists()?snap.data().text:""});
+onSnapshot(noticeRef,snap=>{noticeText.textContent=snap.exists()?snap.data().text:"";});
 
-// Modal
+// 🪟 Modal
 modalClose.onclick=()=>modalBg.style.display="none";
 modalBg.onclick=e=>{if(e.target===modalBg) modalBg.style.display="none";}
+
 function showModal(d){
   modalContent.innerHTML=`<h2 class='text-lg font-bold mb-2'>${d.title}</h2>`;
-  d.blocks.forEach(b=>{if(b.type=="text") modalContent.innerHTML+=`<p class='mb-2 text-gray-800'>${b.text}</p>`;
-  else modalContent.innerHTML+=`<img src='${b.url}' class='image-zoom'>`;});
+  d.blocks.forEach(b=>{
+    if(b.type=="text") modalContent.innerHTML+=`<p class='mb-2 text-gray-800'>${b.text}</p>`;
+    else modalContent.innerHTML+=`<img src='${b.url}' class='image-zoom mb-2'>`;
+  });
+
   const user=auth.currentUser;
   if(user && user.email===ADMIN_EMAIL){
-    const editBtn=document.createElement("button"); editBtn.textContent="Edit"; editBtn.className="bg-gray-200 px-3 py-1 rounded mr-2";
+    const editBtn=document.createElement("button");
+    editBtn.textContent="Edit";
+    editBtn.className="bg-gray-200 px-3 py-1 rounded mr-2";
     editBtn.onclick=()=>{
-      editingId=d.id; aTitle.value=d.title; aCat.value=d.category; blocksList.innerHTML="";
-      d.blocks.forEach(b=>{if(b.type=="text"){const t=document.createElement("textarea"); t.value=b.text; t.dataset.type="text"; t.className="border p-2 w-full mb-2 rounded"; blocksList.appendChild(t);} else{const inp=document.createElement("input"); inp.type="file"; inp.className="w-full mb-2"; blocksList.appendChild(inp);}});
+      editingId=d.id;
+      aTitle.value=d.title;
+      aCat.value=d.category;
+      blocksList.innerHTML="";
+      d.blocks.forEach(b=>{
+        if(b.type=="text"){
+          const t=document.createElement("textarea");
+          t.value=b.text;
+          t.dataset.type="text";
+          t.className="border p-2 w-full mb-2 rounded";
+          blocksList.appendChild(t);
+        } else {
+          const inp=document.createElement("input");
+          inp.type="file";
+          inp.className="w-full mb-2";
+          blocksList.appendChild(inp);
+        }
+      });
       modalBg.style.display="none";
     };
-    const delBtn=document.createElement("button"); delBtn.textContent="Delete"; delBtn.className="bg-red-500 text-white px-3 py-1 rounded";
+    const delBtn=document.createElement("button");
+    delBtn.textContent="Delete";
+    delBtn.className="bg-red-500 text-white px-3 py-1 rounded";
     delBtn.onclick=async()=>{if(confirm("Delete this post?")) await deleteDoc(doc(db,"vasai_news",d.id)); modalBg.style.display="none";}
-    modalContent.appendChild(editBtn); modalContent.appendChild(delBtn);
+    modalContent.appendChild(editBtn);
+    modalContent.appendChild(delBtn);
   }
+
   modalBg.style.display="flex";
-  modalContent.querySelectorAll("img.image-zoom").forEach(img=>{img.onclick=()=>{zoomImg.src=img.src; zoomModal.style.display="flex";}});
+
+  // Image zoom inside modal
+  modalContent.querySelectorAll("img.image-zoom").forEach(img=>{
+    img.onclick=(e)=>{
+      e.stopPropagation();
+      zoomImg.src=img.src;
+      zoomModal.style.display="flex";
+    };
+  });
 }
+
+// 🔍 Zoom close
 document.querySelector(".zoom-close").onclick=()=>zoomModal.style.display="none";
 zoomModal.onclick=e=>{if(e.target===zoomModal) zoomModal.style.display="none";}
 </script>
+
 </body>
 </html>
